--- a/.github/workflows/main-ci.yaml
+++ b/.github/workflows/main-ci.yaml
@@ -2,7 +2,10 @@ name: 'CI workflow for main branch'
 
 on:
   push:
-    branches: ['main']
+    branches: 
+      - 'main'
+    paths-ignore:
+      - '.github/**'
 
 jobs:
   CI:
