--- a/.github/workflows/feature-ci.yaml
+++ b/.github/workflows/feature-ci.yaml
@@ -1,4 +1,4 @@
-name: 'CI workflow for feature branches'
+name: 'CI/CD workflow for feature branches'
 
 on:
   push:
@@ -6,10 +6,15 @@ on:
     paths-ignore:
       - '.github/**'
   pull_request:
-    branches: ['feature/**']
+    branches: ['main']
 
 jobs:
   CI:
     runs-on: ubuntu-latest
     steps:
       - run: echo "CI workflow for feature branches..."
+  CD:
+    runs-on: ubuntu-latest
+    environment: 'Dev'
+    steps:
+      - run: echo "CD workflow for feature branches"
